--- a/layout2/style2.css
+++ b/layout2/style2.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
 }
 
+/* Set a border for all elements within the body */
 body * {
     border: 2px solid #000;
     height: 90px;
@@ -17,16 +18,25 @@ nav {
 }
 
 main {
-    width: 100%;
-    height: 100vh;
+    width: 90%;
+    height: 50vh;
     border: none;
 }
 
-aside, section {
-    display: inline-block; /* Make the content inline */
-    vertical-align: top; /* Align content to the top */
-    width: 50%; /* Each content takes 50% of the width */
-    height: 50vh;
-    margin: 0; /* Remove any default margin */
-    padding: 0; /* Remove any default padding */
+/* Separate Content 1 and Content 2 */
+aside {
+    width: 48.5%;
+    height: 45vh;
+    float: left;
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
+}
+
+section {
+    width: 48.5%;
+    height: 45vh;
+    float: left;
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
+}
+footer{
+    height: 90px;
 }
