--- a/layout4/style4.css
+++ b/layout4/style4.css
@@ -1,56 +1,73 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
-.container {
+.grid-container {
+    display: grid;
+    box-sizing:border-box;
+    grid-template-areas:
+    "banner banner banner banner banner banner"
+    "nav nav nav nav nav nav"
+    "main main main picture about about"
+    "main main main picture about about"
+    "main main main recent recent recent"
+    "main main main recent recent recent"
+    "main main main recent recent recent"
+    "footer footer footer footer footer footer";
+    height: auto;
+    }
+    .ban {
+    grid-area: banner;
     border: 2px solid black;
-}
-
-.banner {
-    border-bottom: 2px solid black;
-    padding: 20px;
-}
-
-.navigation {
-    padding: 10px;
-    border-bottom: 2px solid black;
-}
-
-.main-content {
+    border-bottom: none;
+    height: 5rem;
     display: flex;
-    border-bottom: 2px solid black;
-    width: 50px;
-    height: 50%;
-
-}
-
-.picture {
-    float: left;
-    flex: 1;
-    border-right: 2px solid black;
-    padding: 20px;
-    height: 100%; /* Adjust as needed */
-}
-
-.about-me {
-    float: left;
-    flex: 3;
-    border-right: 2px solid black;
-    padding: 20px;
-    height: 100%; /* Adjust as needed */
-}
-
-.recent-tweets {
-    float:left;
-    flex: 2;
-    padding: 20px;
-    height: 100%; /* Adjust as needed */
-}
-
-.footer {
-    border-top: 2px solid black;
-    padding: 20px;
-    text-align: center;
-}
+    justify-content: center;
+    align-items: center;
+    }
+    .nav {
+    grid-area: nav;
+    border: 2px solid black;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .main {
+    grid-area: main;
+    border: 2px solid black;
+    border-bottom: none;
+    border-top: none;
+    height: 40rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .picture {
+    grid-area: picture;
+    border: 2px solid black;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .about {
+    grid-area: about;
+    border: 2px solid black;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .recent {
+    grid-area: recent;
+    border: 2px solid black;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .footer {
+    grid-area: footer;
+    border: 2px solid black;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
