--- a/layout2/style2.css
+++ b/layout2/style2.css
@@ -1,42 +1,103 @@
 body {
-    margin: 0;
-    padding: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-/* Set a border for all elements within the body */
-body * {
-    border: 2px solid #000;
-    height: 90px;
-    margin: 5px;
-    text-align: center;
-    font-size: 2rem;
-    box-sizing: border-box; /* Include padding and border in element's total width and height */
-}
-
+div,
+header,
+footer,
 nav {
-    height: 90px;
+    background-color: #fd00be;
+    margin: 3px;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
 }
 
-main {
-    width: 100%;
-    height: 50vh;
+.container div:nth-child(2) {
+    flex-grow: 4;
+    height: 60vh;
+    background-color:#0375f8 ;
+}
+
+.container div {
+    height: 60vh;
+    flex-grow: 1;
+}
+
+.container {
+    margin-bottom: 10px;
     border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
-/* Separate Content 1 and Content 2 */
-aside {
-    width: 49%;
-    height: 49vh;
-    float: left;
-    box-sizing: border-box; /* Include padding and border in element's total width and height */
+section, aside, header, footer {
+    background-color: #e42609;
+    margin: 3px;
 }
 
-section {
-    width: 49%;
-    height: 49vh;
-    float: left;
-    box-sizing: border-box; /* Include padding and border in element's total width and height */
+header, footer, nav {
+    height: 10vh;
 }
-footer{
-    height: 90px;
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    aside {
+        display: block;
+    } 
+
+    main, aside, section {
+        min-height: 100vh;
+        float: left;
+        
+    }
+
+    main {
+        width: 100%;
+    }
+
+    section {
+        width: 49%;
+        background-color: #36fd05;
+        align-items: center;
+    }
+
+    aside {
+        width: 49%;
+       
+        background-color: #cb05fd;
+        align-items: center;
+    }
+
+    footer {
+        clear: both;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .container {
+        flex-direction: row;
+    }
+
+    .container div {
+        width: 100%;
+        height: 50vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container div:nth-child(2) {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    footer {
+        height: 10vh;
+    }
 }
