--- a/layout3/style3.css
+++ b/layout3/style3.css
@@ -1,30 +1,107 @@
-body *{
-    border: 2px solid #000;
-    height: 90px;
-    margin: 5px;
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+div,
+header,
+footer,
+nav {
+    background-color: #fd00be;
+    margin: 3px;
     text-align: center;
-    font-size: 2rem;
+    justify-content: center;
+    align-content: center;
+
 }
 
-nav{
-    height: 50px;
+.container div:nth-child(2) {
+    flex-grow: 4;
+    height: 60vh;
+    background-color:#0375f8 ;
 }
-main{
-    width: 100%;
-    height: 100vh;
-    display: inline-block;
+
+.container div {
+    height: 60vh;
+    flex-grow: 1;
+}
+
+.container {
+    margin-bottom: 10px;
     border: none;
-}
-aside{
-    float: left;
-    width: 30%;
-    height: 100vh;
-}
-section{
-    float: left;
-    width: 35%;
-    height: 100vh;
-    margin-left: 10px;
-    margin-right: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
+section, aside, header, footer{
+    background-color: #e42609;
+    margin: 3px;
+    
+}
+
+header, footer,nav{
+    height: 10vh;
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    aside{
+        display: block;
+    } 
+
+    main, aside, section{
+        min-height: 100vh;
+        float: left;
+    background-color: #ff9100;
+    }
+
+    main{
+        width: 100%;
+    }
+
+    section{
+        width: 57%;
+        margin-left: 6px;
+        margin-right: 6px;
+    }
+
+    aside{
+        width: 20%;
+    }
+
+    footer{
+        clear: both;
+    }
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 767px) {
+    .container {
+        flex-direction: row;
+    }
+
+    .container div {
+        width: 100%;
+        height: 50vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container div:nth-child(2) {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    footer{
+        height: 10vh;
+    
+     
+    }
+
+
+}
